# haberlea-deezer

./: pyproject.toml
src/haberlea_deezer/: __init__.py  deezer_api.py  interface.py
